# geofuse

./: .cruft.json  .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.cfg
docs/: api_docs.md
src/geofuse/: __init__.py  config.py  main.py  model.py  pipeline.py  score.py  scoring.py
src/geofuse/geocode/: __init__.py  azure.py  google.py  model.py  nominatim.py
src/geofuse/geocoding/: __init__.py  azure.py  google.py  model.py  nominatim.py
src/geofuse/shapes/: __init__.py  clean.py  harmonize.py  merge.py  model.py  partition.py  retry.py  ui.py
tests/: test_geofuse.py
