[tool.poetry]
name = "geofuse"
version = "0.0.1"
description = "GeoFuse leverages geocoding APIs, fuzzy string matching, and administrative boundary data to provide approximate geocoding for a data source."
authors = [
    "James Collins <collijk1@gmail.com>",
]
license = "MIT"
readme = "README.md"

documentation = "https://collijk.github.io/geofuse"
homepage = "https://collijk.github.io/geofuse"
repository = "https://github.com/collijk/geofuse"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]

packages = [
    { include = "geofuse", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pydantic = "^2.4.2"
shapely = "^2.0.1"
geopandas = "^0.14.0"
googlemaps = "^4.10.0"
azure-maps-search = "^1.0.0b2"
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov geofuse \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "shapely",
    "googlemaps",
    "joblib",
    "azure.maps.search",
    "azure.maps.search.models",
]
ignore_missing_imports = true

[tool.tryceratops]
ignore=["TRY003"]

[tool.autoflake]
ignore-init-module-imports = true
